discussion/kv_engine/101372/101372_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Revert "MB-30913: Add Scopes to VBucket Filters"

This reverts commit e81d2ffb1ad3fed735a2c0662d4e94d1249b4ff8 - it's causing a number of the server builds to fail (e.g. http://server.jenkins.couchbase.com/job/couchbase-server-unix/126207/) with the following error:

    /home/couchbase/jenkins/workspace/couchbase-server-unix/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:669:5:   required from here
    /home/couchbase/jenkins/workspace/couchbase-server-unix/googletest/googletest/include/gtest/gtest.h:1392:16: error: no match for ‘operator==’ (operand types are ‘const unsigned char’ and ‘const cb::mcbp::ClientOpcode’)
        if (expected == actual) {
           ~~~~~~~~~^~~~~~~~~

Change-Id: Icd44a1deb8530ddf59bdb5b73fc91ab6cb5eb9a9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2018-11-05 10:15:27.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-05 10:15:44.000000000
Message: 
Patch Set 1: Verified+1 Code-Review+2

Self-approving given this is failing the build.
----------------------------------------------------------------------------------------------------------------------
